2009-05-30  Anthony Green  <green@moxielogic.com>
	
	* HACKING: Added u-boot.  Corrections.
	* README: New file.

2009-05-26  Anthony Green  <green@moxielogic.com>

	* u-boot: Initial u-boot bits.
	* build.xml: Add u-boot build machinery.
	
2009-05-23  Anthony Green  <green@moxielogic.com>

	* test/Makefile (clean): Clean up more stuff.
	* scripts/moxie-elf-newlib.spec.in: Fix install.

2009-05-22  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-qemu.spec.in: Don't install qemu-nbd.

2009-05-16  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix in-tree qemu install prefix.

2009-05-08  Anthony Green  <green@moxielogic.com>

	* scripts/mksrpm.sh: run gcc_upate --touch before tarring up
	gcc sources.
	* scripts/fix-svn.sh: Fix.

2009-05-07  Anthony Green  <green@moxielogic.com>

	* scripts/comps.xml: New file.
	* scripts/*spec.in: Lots 'o tweaks
	* scripts/mksrpm.sh: New file.
	* scripts/mkrpms.sh: New file.

2009-05-01  Anthony Green  <green@moxielogic.com>

	* build.xml: Don't build gmp/mpfr/cloog-ppl/ppl out of tree now.
	Those sources have been integrated into the gcc source tree.
	* libs/*: Delete these libraries.
	* libs: Delete directory.
	* scripts/mksrpm.sh (QEMU_VERSION): Adjust for new git repository.

2009-04-30  Anthony Green  <green@moxielogic.com>

	* qemu: Merge new upstream git repository.
	* build.xml: Tweak accordingly.

2009-04-28  Anthony Green  <green@moxielogic.com>

	* build.xml: Clean up clean target.  Make host library builds
	optional.

2009-04-27  Anthony Green  <green@moxielogic.com>

	* scripts/fix-svn.sh: New file.

2009-04-24  Anthony Green  <green@moxielogic.com>

	* scripts/precheck/configure.ac: Remove gmp and mpfr checks.

2009-03-25  Anthony Green  <green@moxielogic.com>

	* benchmarks/MiBench/*: Fix spro-elf references.  Link with
	-Tsim.ld.

2009-03-17  Anthony Green  <green@moxielogic.com>

	* scripts/dejagnu/site.exp: Fix spro-elf reference.

2009-03-12  Anthony Green  <green@moxielogic.com>
