@@ -1,34 +1,34 @@
-10101010101010101010101010101010101010101010101010101010101010101010101010101010101010101
-01010101010101010101010101010101010101010101010101010101010101010101010101010101010101010
-1       ___  ___          _     ______                                                  1
-0       |  \/  |         (_)    |  _  \                                                 0
-1       | .  . | _____  ___  ___| | | |_____   __     Tools, Firmware and HDL code      1
-0       | |\/| |/ _ \ \/ / |/ _ \ | | / _ \ \ / /     for the Moxie processor core.     0
-1       | |  | | (_) >  <| |  __/ |/ /  __/\ V /                                        1
-0       \_|  |_/\___/_/\_\_|\___|___/ \___| \_/       http://www.moxielogic.org/blog    0
-1                                                                                       1
-01010101010101010101010101010101010101010101010101010101010101010101010101010101010101010
-10101010101010101010101010101010101010101010101010101010101010101010101010101010101010101
-0                                                                                       0
-1    The Moxie core is a simple embedded microprocessor core whose HDL code is          1
-0    available under a Free Software license.                                           0
-1                                                                                       1
-0    MoxieDev is the source and build environment for the Moxie toolchain,              0
-1    simulators, firmware and HDL code.                                                 1
-0                                                                                       0
-1                                                                                       1
-0    For details on the Moxie architecture and project, see the project wiki at:        0
-1                                                                                       1
-0               http://www.moxielogic.org/wiki                                          0
-1                                                                                       1
-0    For ongoing updates on the progress of the Moxie project, see the blog at:         0
-1                                                                                       1
-0               http://www.moxielogic.org/blog                                          0
-1                                                                                       1
-0                                                                                       0
-1    The contents of MoxieDev are Copyright (C) 2008, 2009 Anthony Green unless         1
-0    indicated otherwise.                                                               0
-1                                                                                       1
-01010101010101010101010101010101010101010101010101010101010101010101010101010101010101010
-10101010101010101010101010101010101010101010101010101010101010101010101010101010101010101
+1010101010101010101010101010101010101010101010101010101010101010101010101010101
+0101010101010101010101010101010101010101010101010101010101010101010101010101010
+1   ___  ___          _     ______                                            1
+0   |  \/  |         (_)    |  _  \              Open Source Tools,           0
+1   | .  . | _____  ___  ___| | | |_____   __    Firmware, and HDL code for   1
+0   | |\/| |/ _ \ \/ / |/ _ \ | | / _ \ \ / /    the Moxie processor core.    0
+1   | |  | | (_) >  <| |  __/ |/ /  __/\ V /                                  1
+0   \_|  |_/\___/_/\_\_|\___|___/ \___| \_/      http://moxielogic.org/blog   0
+1                                                                             1
+0101010101010101010101010101010101010101010101010101010101010101010101010101010
+1010101010101010101010101010101010101010101010101010101010101010101010101010101
+0                                                                             0
+1   The Moxie core is a simple embedded microprocessor core whose HDL code    1
+0   is available under a Free Software license.                               0
+1                                                                             1
+0   MoxieDev is the source and build environment for the Moxie toolchain,     0
+1   simulators, firmware and HDL code.                                        1
+0                                                                             0
+1                                                                             1
+0   For details on the Moxie architecture and project, see the project wiki   0
+1   at:                                                                       1
+0               http://www.moxielogic.org/wiki                                0
+1                                                                             1
+0   For ongoing updates on the progress of the Moxie project, see the blog    0
+1   at:                                                                       1
+0               http://www.moxielogic.org/blog                                0
+1                                                                             1
+0                                                                             0
+1   The contents of MoxieDev are Copyright (C) 2008, 2009 Anthony Green       1
+0   unless indicated otherwise.                                               0
+1                                                                             1
+0101010101010101010101010101010101010101010101010101010101010101010101010101010
+1010101010101010101010101010101010101010101010101010101010101010101010101010101
 
