@@ -1,5 +1,6 @@
 <project name="moxiedev" default="usage">
 
+  <property file="${user.home}/moxiedev.properties"/>
   <property environment="env"/>
 
   <!-- =================================================================== -->
